2006-10-18  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpwidgets.c (find_mnemonic_widget): special
	case GimpSizeEntry and use the last entry.

	* app/tools/gimprotatetool.c
	* app/tools/gimpsheartool.c: added mnemonics (bug #162541).

2006-10-18  Michael Natterer  <mitch@gimp.org>

	Separate selection tool function (select, move, cut, ...) from
	selection mode (replace, add, ...). Fixes bug #313634 (that bug
	wasn't triggered any more in HEAD, but was still there).

	* app/tools/tools-enums.h: renamed enum SelectOp to SelectFunction
	and replaced the values REPLACE, ADD, SUBTRACT and INTERSECT by a
	single value SELECT.

	* app/tools/gimpselectiontool.h (struct GimpSelectionTool):
	renamed member "op" to "function". Changed "SelectOps saved_op" to
	"GimpChannelOps saved_operation".

	* app/tools/gimpselectiontool.c: we always have the right
	GimpChannelOps in the tool options, so simply use it instead of
	mixing up unrelated stuff in one enum. Results is some medium-ugly
	nested switches, but is generally much cleaner than before.

	* app/tools/gimpforegroundselecttool.c
	* app/tools/gimpfreeselecttool.c
	* app/tools/gimpiscissorstool.c
	* app/tools/gimpregionselecttool.c: changed accordingly. Use the
	operation from the tool options instead of selection_tool->op when
	making the actual selection.

2006-10-17  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimprectangleselecttool.[ch]
	* app/tools/gimpellipseselecttool.c: use enum GimpChannelOps
	instead of SelectOps.

2006-10-17  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpselectioneditor.c: use enum GimpChannelOps
	instead of SelectOps (which is a tool state).

2006-10-17  Sven Neumann  <sven@gimp.org>

	* app/plug-in/gimppluginprocedure.c
	(gimp_plug_in_procedure_set_image_types): include the procedure
	name in the output on stderr.

2006-10-17  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/scripts/web-browser.scm: reviewed blurbs and
	marked them for translation.
