@@ -71,17 +71,14 @@
 )
 
 (script-fu-register "script-fu-unsharp-mask"
-  _"Unsharp Mask..."
-  _"Make a new image from the current layer by applying the unsharp mask method"
+  "Unsharp Mask..."
+  "Make a new image from the current layer by applying the unsharp mask method"
   "Shuji Narazaki <narazaki@gimp.org>"
   "Shuji Narazaki"
   "1997,1998"
   ""
-  SF-IMAGE       "Image"             0
-  SF-DRAWABLE    "Drawable to apply" 0
-  SF-ADJUSTMENT _"Mask size"         '(5 1 100 1 1 0 1)
-  SF-ADJUSTMENT _"Mask opacity"      '(50 0 100 1 1 0 1)
+  SF-IMAGE      "Image"             0
+  SF-DRAWABLE   "Drawable to apply" 0
+  SF-ADJUSTMENT "Mask size"         '(5 1 100 1 1 0 1)
+  SF-ADJUSTMENT "Mask opacity"      '(50 0 100 1 1 0 1)
 )
-
-(script-fu-menu-register "script-fu-unsharp-mask"
-                         "<Image>/Filters/Enhance")
